@@ -1,3 +1,4 @@
 5.28.0
 NEW
     - Added a toggle for target, target target, focus and focus target castbar
+    - Added option to show a separate energy bar for some bosses like Anduin at the objectives boss frames
