@@ -2,21 +2,23 @@ local _, GW = ...
 local AddTrackerNotification = GW.AddTrackerNotification
 local RemoveTrackerNotificationOfType = GW.RemoveTrackerNotificationOfType
 local TRACKER_TYPE_COLOR = GW.TRACKER_TYPE_COLOR
-local AddToClique = GW.AddToClique
+--local AddToClique = GW.AddToClique
 local PowerBarColorCustom = GW.PowerBarColorCustom
 local GetSetting = GW.GetSetting
 local bossFrames = {}
 
 local function updateBossFrameHeight()
     local i = 0
+    local height = 0
 
     for k, frame in pairs(bossFrames) do
         if frame:IsShown() then
             i = k
+            height = height + frame:GetHeight()
         end
     end
 
-    GwQuesttrackerContainerBossFrames:SetHeight(i > 0 and (35 * i) or 1)
+    GwQuesttrackerContainerBossFrames:SetHeight(i > 0 and height or 1)
 end
 GW.AddForProfiling("bossFrames", "updateBossFrameHeight", updateBossFrameHeight)
 
@@ -39,6 +41,7 @@ local function updateBoss_Power(self)
     local powerType, powerToken, altR, altG, altB = UnitPowerType(self.unit)
     local power = UnitPower(self.unit, powerType)
     local powerMax = UnitPowerMax(self.unit, powerType)
+    local powerPercentage = 0
 
     if PowerBarColorCustom[powerToken] then
         local pwcolor = PowerBarColorCustom[powerToken]
@@ -47,18 +50,23 @@ local function updateBoss_Power(self)
         self.power:SetStatusBarColor(altR, altG, altB)
     end
 
+    if power > 0 and powerMax > 0 then
+        powerPercentage = power / powerMax
+    end
+
     self.power:SetMinMaxValues(0, powerMax)
     self.power:SetValue(power)
+    self.power.name:SetText(getglobal(powerToken) or UNKNOWN)
+    self.power.value:SetText(GW.RoundInt(powerPercentage * 100) .. "%")
 end
 GW.AddForProfiling("bossFrames", "updateBoss_Power", updateBoss_Power)
 
 local function updateBoss_Name(self)
-    local guidTarget = UnitGUID("target")
     local name = UnitName(self.unit)
 
     self.name:SetText(name)
     self.guid = UnitGUID(self.unit)
-    if self.guid == guidTarget then
+    if self.guid == UnitGUID("target") then
         self.name:SetFont(UNIT_NAME_FONT, 14)
     else
         self.name:SetFont(UNIT_NAME_FONT, 12)
@@ -81,6 +89,38 @@ local function updateBoss_RaidMarkers(self)
 end
 GW.AddForProfiling("unitframes", "updateBoss_RaidMarkers", updateBoss_RaidMarkers)
 
+local function checkForExtraEnergyBar(self)
+    if not self.guid then return end
+    local showExtraEnergybar = false
+    local _, _, _, _, _, npc_id = strsplit("-", self.guid)
+    for encounterId, _ in pairs(GW.bossFrameExtraEnergyBar) do
+        if GW.bossFrameExtraEnergyBar[encounterId].npcId == tonumber(npc_id) and GW.bossFrameExtraEnergyBar[encounterId].enable == true then
+            showExtraEnergybar = true
+            break
+        end
+    end
+
+    if showExtraEnergybar then
+        self.power:SetHeight(8)
+        self.health:SetHeight(10)
+        self.power:SetPoint("TOPRIGHT", self, "TOPRIGHT", -10, -45)
+        self.power.value:Show()
+        self.power.name:Show()
+        self.powerBarbg:Show()
+        self:SetHeight(60)
+    else
+        self.power:SetHeight(2)
+        self.health:SetHeight(8)
+        self.power:ClearAllPoints()
+        self.power:SetPoint("TOPRIGHT", self, "TOPRIGHT", -10, -28)
+        self.power.value:Hide()
+        self.power.name:Hide()
+        self.powerBarbg:Hide()
+        self:SetHeight(35)
+    end
+        
+end
+
 local function bossFrame_OnEvent(self, event)
     if not self:IsShown() then
         return
@@ -95,35 +135,42 @@ local function bossFrame_OnEvent(self, event)
     elseif event == "RAID_TARGET_UPDATE" then
         updateBoss_RaidMarkers(self)
     elseif event == "PLAYER_ENTERING_WORLD" or event == "UNIT_NAME_UPDATE" or event == "INSTANCE_ENCOUNTER_ENGAGE_UNIT" then
+        updateBoss_Name(self)
+        checkForExtraEnergyBar(self)
         updateBoss_Health(self)
         updateBoss_Power(self)
-        updateBoss_Name(self)
         updateBoss_RaidMarkers(self)
+        updateBossFrameHeight()
     end
 end
-GW.AddForProfiling("bossFrames", "bossFrame_OnEvent", bossFrame_OnEvent) 
+GW.AddForProfiling("bossFrames", "bossFrame_OnEvent", bossFrame_OnEvent)
 
 local function registerFrame(i)
-    local bossFrame = CreateFrame("Button", nil, GwQuestTracker, "GwQuestTrackerBossFrameTemp")
+    local bossFrame = CreateFrame("Button", "GwBossFrame" .. i, GwQuestTracker, "GwQuestTrackerBossFrameTemp")
     local unit = "boss" .. i
     local yOffset = GetSetting("SHOW_QUESTTRACKER_COMPASS") and 70 or 0
-    local p = yOffset + ((35 * i) - 35)
+    --local p = yOffset + ((35 * i) - 35)
 
-    bossFrame:SetPoint("TOPRIGHT", GwQuestTracker, "TOPRIGHT", 0, -p)
+    if i == 1 then
+        bossFrame:SetPoint("TOPRIGHT", GwQuestTracker, "TOPRIGHT", 0, -yOffset)
+    else
+        bossFrame:SetPoint("TOPRIGHT", _G["GwBossFrame" .. i - 1], "BOTTOMRIGHT", 0, 0)
+    end
+    --bossFrame:SetPoint("TOPRIGHT", GwQuestTracker, "TOPRIGHT", 0, -p)
 
     bossFrame.id = i
     bossFrame.unit = unit
     bossFrame.guid = UnitGUID(unit)
 
     bossFrame:SetAttribute("unit", unit)
-    bossFrame:SetAttribute("*type1", "target")
-    bossFrame:SetAttribute("*type2", "showmenu")
+    --bossFrame:SetAttribute("*type1", "target")
+    --bossFrame:SetAttribute("*type2", "showmenu")
 
-    AddToClique(bossFrame)
+    --AddToClique(bossFrame)
 
     RegisterUnitWatch(bossFrame)
-    bossFrame:EnableMouse(true)
-    bossFrame:RegisterForClicks("AnyDown")
+    --bossFrame:EnableMouse(true)
+    --bossFrame:RegisterForClicks("AnyDown")
 
     bossFrame.name:SetFont(UNIT_NAME_FONT, 12)
     bossFrame.name:SetShadowOffset(1, -1)
@@ -169,11 +216,13 @@ local function registerFrame(i)
             compassData.TITLE = UnitName(self.unit)
 
             AddTrackerNotification(compassData)
-            updateBossFrameHeight()
+            --self.extraEnergybar = GW.bossFrameExtraEnergyBar[encounterId]
+            updateBoss_Name(self)
+            checkForExtraEnergyBar(self)
             updateBoss_Health(self)
             updateBoss_Power(self)
-            updateBoss_Name(self)
             updateBoss_RaidMarkers(self)
+            updateBossFrameHeight()
         end
     )
 
