@@ -54,6 +54,46 @@ local function LoadHudPanel(sWindow)
             GW.PixelPerfection()
         end
     )
+
+    local encounterfKeys, encounterVales = {}, {}
+    local settingstable = GetSetting("boss_frame_extra_energy_bar")
+    for encounterId, _ in pairs(GW.bossFrameExtraEnergyBar) do
+        if encounterId and EJ_GetEncounterInfo(encounterId) then
+            local encounterName, _, _, _, _, instanceId = EJ_GetEncounterInfo(encounterId)
+            local instanceName = instanceId and EJ_GetInstanceInfo(instanceId)
+            local name = format("%s |cFF888888(%s)|r", encounterName, instanceName or UNKNOWN)
+            tinsert(encounterfKeys, encounterId)
+            tinsert(encounterVales, name)
+
+            if settingstable[encounterId] == nil then
+                local newTable = GW.copyTable(nil, settingstable)
+                newTable[encounterId] = {npcId = GW.bossFrameExtraEnergyBar[encounterId].npcId, enable = true}
+
+                GW.SetSetting("boss_frame_extra_energy_bar", newTable)
+                settingstable = GetSetting("boss_frame_extra_energy_bar")
+            end
+
+            GW.bossFrameExtraEnergyBar[encounterId].enable = settingstable[encounterId].enable
+        end
+    end
+
+    addOptionDropdown(
+        p.scroll.scrollchild,
+        L["Boss frames: Separate Energy Bar"],
+        L["If enabled, enabled bosses’ energy bars will be shown separately from their health bar."],
+        "boss_frame_extra_energy_bar",
+        function(toSet, id)
+            GW.bossFrameExtraEnergyBar[id].enable = toSet
+        end,
+        encounterfKeys,
+        encounterVales,
+        nil,
+        nil,
+        true,
+        nil,
+        "encounter"
+    )
+
     addOptionDropdown(
         p.scroll.scrollchild,
         COMBAT_TEXT_LABEL,
