@@ -1,6 +1,7 @@
 5.28.0
 NEW
     - Added a toggle for target, target target, focus and focus target castbar
+    - Added option to show a separate energy bar for some bosses like Anduin at the objectives boss frames
 
 5.27.1
 FIXES
